[gd_scene load_steps=9 format=2]

[ext_resource path="res://Code/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code/Enemies/Spider/Spider.gd" type="Script" id=2]
[ext_resource path="res://Art/Shaders/WhiteFlash.shader" type="Shader" id=3]
[ext_resource path="res://Art/Sprite Frames/Grey_spriteframes.tres" type="SpriteFrames" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.2693

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="Animation" id=4]
resource_name = "OnHit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Display:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Spider" instance=ExtResource( 1 )]
script = ExtResource( 2 )
health = 100.0
attack_range_med = 75.0
attack_range_close = 40.0
dash_speed = 200
warning_time = 0.6

[node name="Shape" parent="." index="0"]
position = Vector2( 5, 0 )
shape = SubResource( 1 )

[node name="Shape" parent="Hitbox" index="0"]
position = Vector2( 5, 0 )
shape = SubResource( 2 )

[node name="hp" parent="." index="2"]
margin_left = -10.0
margin_top = -35.0
margin_right = 300.0

[node name="Display" type="AnimatedSprite" parent="." index="4"]
material = SubResource( 3 )
frames = ExtResource( 4 )
animation = "Idle"

[node name="AttackTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[node name="DashTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="DeathTimer" type="Timer" parent="." index="7"]
wait_time = 0.6
one_shot = true

[node name="PostAttackTimer" type="Timer" parent="." index="8"]
wait_time = 0.5
one_shot = true

[node name="LungeCooldown" type="Timer" parent="." index="9"]
wait_time = 4.0
one_shot = true

[node name="OnHitFeedback" type="AnimationPlayer" parent="." index="10"]
anims/OnHit = SubResource( 4 )
